Correct text-align: center so that it only affects one line on 'posts'
It previously affected everything

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ header h3{
     font-size: large;
 }
 
-div p{
+#posts-bottom{
     text-align: center;
 }
 
